Finish Styling for topBar Correct spacing and font size, along with hover effect will allow potential visitors to better engage with the webpage.

--- a/style.css
+++ b/style.css
@@ -3,22 +3,35 @@
     margin: 0;
     background-color: white;
 }
+
 .topContainer{
     display: flex;
     /* height: 25px; */
     align-items: center;
     justify-content: space-between;
     /* background-color: white; */
-    border: solid red;
-    
+    /* border: solid red; */
+    max-width: none;
+    border-left: 20px solid transparent;
+    border-right: 20px solid transparent;
+    border-left-width: 50px;
+    border-right-width: 50px;
+}
+.navs{
+    flex-grow: 1;
+    align-self: stretch;
 }
 
-.navOptions{
-    text-align: right;
-    display: flex;
-    justify-content: end;
-    border: solid black;
 
+
+.navOptions{
+    /* text-align: right; */
+    display: flex;
+    align-items: center;
+    /* position: relative; */
+    justify-content: end;
+    /* border: solid black; */
+    height: 100%;
 }
 
 .proLearn,
@@ -27,12 +40,13 @@
 .donNow,
 .about,
 .search {
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 6px;
+    margin-left: 15px;
+    margin-right: 30px;
+    margin-top: 30px;
     padding-bottom: 30px;
     text-decoration: none;
     font-weight: bold;
+    font-size: 25px;
     /* border: solid black; */
     
 }
@@ -44,10 +58,12 @@
 .about:hover,
 .search:hover{
     border-bottom: solid rgb(88, 199, 255);
+    border-width: 1px;
 }
 .search{
     height: 20px;
 }
+
 
 
 
